Fixed a bug: Now when you click in some button on mobile devices they don't get colored together

--- a/src/app/listagem/listagem-responsive.scss
+++ b/src/app/listagem/listagem-responsive.scss
@@ -48,6 +48,7 @@
         font-size: 2.5vw;
         font-weight: bold;
         margin-left: 5px;
+        margin-bottom: 5px;
         box-shadow: 0 6px 4px -6px #ff7422;
     }
 }
